examples/test/testpolicy1707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1707
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key40: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value6
          key18: value26
          key38: value8
      podSelector:
        matchLabels:
          key43: value38
          key44: value1
